# Http-Request-Rust

./: Cargo.toml  README.md
src/: auth_err.rs  main.rs  search_struct_final.rs  succes_search.rs
